Port to PHPUnit 10

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- https://phpunit.de/manual/current/en/appendixes.configuration.html -->
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd" backupGlobals="false" colors="true" bootstrap="tests/bootstrap.php">
-  <coverage>
-    <include>
-      <directory>src</directory>
-      <directory>tests</directory>
-    </include>
-  </coverage>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.5/phpunit.xsd" backupGlobals="false" colors="true" bootstrap="tests/bootstrap.php" cacheDirectory=".phpunit.cache">
   <php>
     <ini name="error_reporting" value="-1"/>
     <server name="APP_ENV" value="test" force="true"/>
     <server name="SHELL_VERBOSITY" value="-1"/>
-    <server name="SYMFONY_DEPRECATIONS_HELPER" value='max[direct]=0&amp;quiet[]=indirect'/>
+    <server name="SYMFONY_DEPRECATIONS_HELPER" value="max[direct]=0&amp;quiet[]=indirect"/>
     <server name="KERNEL_CLASS" value="Dbp\Relay\DispatchBundle\Tests\Kernel"/>
   </php>
   <testsuites>
@@ -19,7 +13,10 @@
       <directory>tests</directory>
     </testsuite>
   </testsuites>
-  <listeners>
-    <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener"/>
-  </listeners>
+  <source>
+    <include>
+      <directory>src</directory>
+      <directory>tests</directory>
+    </include>
+  </source>
 </phpunit>
