Fix content-type validation with api-platform 3.3
api-platform got stricter here, specify the correct content type
to fix those endpoints with 3.3

--- a/src/Resources/config/api_resources.yaml
+++ b/src/Resources/config/api_resources.yaml
@@ -70,6 +70,8 @@ resources:
         uriTemplate: '/dispatch/request-status-changes/{identifier}/file'
         method: 'POST'
         deserialize: false
+        inputFormats:
+          multipart: "multipart/form-data"
         openapiContext:
           tags: ["Dispatch"]
           responses:
@@ -280,6 +282,8 @@ resources:
         uriTemplate: "/dispatch/request-files"
         method: 'POST'
         deserialize: false
+        inputFormats:
+          multipart: "multipart/form-data"
         openapiContext:
           tags: ["Dispatch"]
           responses:
