swagger-ui: update DispatchDeliveryStatusChange endpoint description

--- a/src/Resources/config/api_resources.yaml
+++ b/src/Resources/config/api_resources.yaml
@@ -73,6 +73,7 @@ resources:
         inputFormats:
           multipart: "multipart/form-data"
         openapiContext:
+          summary: "Updates the DispatchDeliveryStatusChange file resource."
           tags: ["Dispatch"]
           responses:
             415:
