Drop support for api-platform v2

--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         "ext-soap": "*",
         "ext-mbstring": "*",
         "ext-libxml": "*",
-        "api-platform/core": "^2.7.11 || ^3.2",
+        "api-platform/core": "^3.2",
         "dbp/relay-base-person-bundle": "^0.2.26",
         "dbp/relay-blob-library": "^0.2.4",
-        "dbp/relay-core-bundle": "^0.1.148",
+        "dbp/relay-core-bundle": "^0.1.186",
         "symfony/framework-bundle": "^5.4.30 || ^6.4",
         "doctrine/orm": "^2.18",
         "doctrine/doctrine-migrations-bundle": "^3.3",
