composer: support newer doctrine

--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
         "dbp/relay-blob-library": "^0.2.4",
         "dbp/relay-core-bundle": "^0.1.186",
         "symfony/framework-bundle": "^5.4.30 || ^6.4",
-        "doctrine/orm": "^2.18",
+        "doctrine/orm": "^2.19 || ^3.2",
         "doctrine/doctrine-migrations-bundle": "^3.3",
-        "doctrine/dbal": "^3.8",
+        "doctrine/dbal": "^3.8 || ^4.0",
         "doctrine/collections": "^1.8 || ^2",
         "doctrine/migrations": "^3.5",
         "symfony/uid": "^5.4 || ^6.4",
