Replace ApiPlatform providers/processors by our own AbstractDataProviders/AbstractDataProcessors from core

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -1,6 +1,6 @@
 services:
-  Dbp\Relay\DispatchBundle\ApiPlatform\:
-    resource: '../../ApiPlatform'
+  Dbp\Relay\DispatchBundle\Rest\:
+    resource: '../../Rest'
     autowire: true
     autoconfigure: true
 
