--- a/src/Resources/config/api_resources.yaml
+++ b/src/Resources/config/api_resources.yaml
@@ -7,13 +7,13 @@ resources:
 
     operations:
       ApiPlatform\Metadata\Get:
-        provider: Dbp\Relay\DispatchBundle\ApiPlatform\GroupProvider
+        provider: Dbp\Relay\DispatchBundle\Rest\GroupProvider
         uriTemplate: '/dispatch/groups/{identifier}'
         openapiContext:
           tags: ["Dispatch"]
 
       ApiPlatform\Metadata\GetCollection:
-        provider: Dbp\Relay\DispatchBundle\ApiPlatform\GroupProvider
+        provider: Dbp\Relay\DispatchBundle\Rest\GroupProvider
         uriTemplate: '/dispatch/groups'
         openapiContext:
           tags: ['Dispatch']
@@ -42,22 +42,22 @@ resources:
     operations:
       ApiPlatform\Metadata\Get:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        provider: Dbp\Relay\DispatchBundle\ApiPlatform\DeliveryStatusChangeProvider
+        provider: Dbp\Relay\DispatchBundle\Rest\DeliveryStatusChangeProvider
         uriTemplate: '/dispatch/request-status-changes/{identifier}'
         openapiContext:
           tags: ["Dispatch"]
 
       ApiPlatform\Metadata\GetCollection:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        provider: Dbp\Relay\DispatchBundle\ApiPlatform\DeliveryStatusChangeProvider
+        provider: Dbp\Relay\DispatchBundle\Rest\DeliveryStatusChangeProvider
         uriTemplate: '/dispatch/request-status-changes'
         openapiContext:
           tags: ['Dispatch']
 
       ApiPlatform\Metadata\Delete:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        processor: Dbp\Relay\DispatchBundle\ApiPlatform\DeliveryStatusChangeFileProcessor
-        provider: Dbp\Relay\DispatchBundle\ApiPlatform\DeliveryStatusChangeFileProvider
+        processor: Dbp\Relay\DispatchBundle\Rest\DeliveryStatusChangeProcessor
+        provider: Dbp\Relay\DispatchBundle\Rest\DeliveryStatusChangeProvider
         uriTemplate: '/dispatch/request-status-changes/{identifier}/file'
         openapiContext:
           summary: "Removes the DispatchDeliveryStatusChange file resource."
@@ -65,8 +65,8 @@ resources:
 
       ApiPlatform\Metadata\Post:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        controller: Dbp\Relay\DispatchBundle\ApiPlatform\UpdateDeliveryStatusChangeFileAction
-        provider: Dbp\Relay\DispatchBundle\ApiPlatform\DeliveryStatusChangeFileProvider
+        controller: Dbp\Relay\DispatchBundle\Rest\UpdateDeliveryStatusChangeFileAction
+        provider: Dbp\Relay\DispatchBundle\Rest\DeliveryStatusChangeProvider
         uriTemplate: '/dispatch/request-status-changes/{identifier}/file'
         method: 'POST'
         deserialize: false
@@ -128,14 +128,14 @@ resources:
 
       ApiPlatform\Metadata\GetCollection:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        provider: Dbp\Relay\DispatchBundle\ApiPlatform\RequestRecipientProvider
+        provider: Dbp\Relay\DispatchBundle\Rest\RequestRecipientProvider
         uriTemplate: '/dispatch/request-recipients'
         openapiContext:
           tags: ["Dispatch"]
 
       ApiPlatform\Metadata\Post:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        processor: Dbp\Relay\DispatchBundle\ApiPlatform\RequestRecipientProcessor
+        processor: Dbp\Relay\DispatchBundle\Rest\RequestRecipientProcessor
         uriTemplate: '/dispatch/request-recipients'
         openapiContext:
           tags: ["Dispatch"]
@@ -157,15 +157,15 @@ resources:
 
       ApiPlatform\Metadata\Get:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        provider: Dbp\Relay\DispatchBundle\ApiPlatform\RequestRecipientProvider
+        provider: Dbp\Relay\DispatchBundle\Rest\RequestRecipientProvider
         uriTemplate: '/dispatch/request-recipients/{identifier}'
         openapiContext:
           tags: ["Dispatch"]
 
       ApiPlatform\Metadata\Delete:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        provider: Dbp\Relay\DispatchBundle\ApiPlatform\RequestRecipientProvider
-        processor: Dbp\Relay\DispatchBundle\ApiPlatform\RequestRecipientProcessor
+        provider: Dbp\Relay\DispatchBundle\Rest\RequestRecipientProvider
+        processor: Dbp\Relay\DispatchBundle\Rest\RequestRecipientProcessor
         uriTemplate: '/dispatch/request-recipients/{identifier}'
         openapiContext:
           tags: ['Dispatch']
@@ -215,21 +215,21 @@ resources:
     operations:
       ApiPlatform\Metadata\Get:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        provider: Dbp\Relay\DispatchBundle\ApiPlatform\PreAddressingRequestProvider
+        provider: Dbp\Relay\DispatchBundle\Rest\PreAddressingRequestProvider
         uriTemplate: '/dispatch/pre-addressing-requests/{identifier}'
         openapiContext:
           tags: ["Dispatch"]
 
       ApiPlatform\Metadata\GetCollection:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        provider: Dbp\Relay\DispatchBundle\ApiPlatform\PreAddressingRequestProvider
+        provider: Dbp\Relay\DispatchBundle\Rest\PreAddressingRequestProvider
         uriTemplate: '/dispatch/pre-addressing-requests'
         openapiContext:
           tags: ['Dispatch']
 
       ApiPlatform\Metadata\Post:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        processor: Dbp\Relay\DispatchBundle\ApiPlatform\PreAddressingRequestProcessor
+        processor: Dbp\Relay\DispatchBundle\Rest\PreAddressingRequestProcessor
         uriTemplate: '/dispatch/pre-addressing-requests'
         openapiContext:
           tags: ['Dispatch']
@@ -264,22 +264,22 @@ resources:
     operations:
       ApiPlatform\Metadata\Get:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        provider: Dbp\Relay\DispatchBundle\ApiPlatform\RequestFileProvider
+        provider: Dbp\Relay\DispatchBundle\Rest\RequestFileProvider
         uriTemplate: '/dispatch/request-files/{identifier}'
         openapiContext:
           tags: ["Dispatch"]
 
       ApiPlatform\Metadata\Delete:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        provider: Dbp\Relay\DispatchBundle\ApiPlatform\RequestFileProvider
-        processor: Dbp\Relay\DispatchBundle\ApiPlatform\RequestFileProcessor
+        provider: Dbp\Relay\DispatchBundle\Rest\RequestFileProvider
+        processor: Dbp\Relay\DispatchBundle\Rest\RequestFileProcessor
         uriTemplate: '/dispatch/request-files/{identifier}'
         openapiContext:
           tags: ["Dispatch"]
 
       ApiPlatform\Metadata\Post:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        controller: Dbp\Relay\DispatchBundle\ApiPlatform\CreateRequestFileAction
+        controller: Dbp\Relay\DispatchBundle\Rest\CreateRequestFileAction
         uriTemplate: "/dispatch/request-files"
         method: 'POST'
         deserialize: false
@@ -333,15 +333,15 @@ resources:
     operations:
       ApiPlatform\Metadata\Get:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        provider: Dbp\Relay\DispatchBundle\ApiPlatform\RequestProvider
+        provider: Dbp\Relay\DispatchBundle\Rest\RequestProvider
         uriTemplate: '/dispatch/requests/{identifier}'
         openapiContext:
           tags: ["Dispatch"]
 
       ApiPlatform\Metadata\Patch:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        provider: Dbp\Relay\DispatchBundle\ApiPlatform\RequestProvider
-        processor: Dbp\Relay\DispatchBundle\ApiPlatform\RequestProcessor
+        provider: Dbp\Relay\DispatchBundle\Rest\RequestProvider
+        processor: Dbp\Relay\DispatchBundle\Rest\RequestProcessor
         uriTemplate: '/dispatch/requests/{identifier}'
         inputFormats:
           json: ['application/merge-patch+json']
@@ -350,15 +350,15 @@ resources:
 
       ApiPlatform\Metadata\Delete:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        provider: Dbp\Relay\DispatchBundle\ApiPlatform\RequestProvider
-        processor: Dbp\Relay\DispatchBundle\ApiPlatform\RequestProcessor
+        provider: Dbp\Relay\DispatchBundle\Rest\RequestProvider
+        processor: Dbp\Relay\DispatchBundle\Rest\RequestProcessor
         uriTemplate: '/dispatch/requests/{identifier}'
         openapiContext:
           tags: ["Dispatch"]
 
       ApiPlatform\Metadata\Post:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        processor: Dbp\Relay\DispatchBundle\ApiPlatform\RequestProcessor
+        processor: Dbp\Relay\DispatchBundle\Rest\RequestProcessor
         uriTemplate: "/dispatch/requests"
         openapiContext:
           tags: ["Dispatch"]
@@ -381,7 +381,7 @@ resources:
 
       ApiPlatform\Metadata\GetCollection:
         security: "is_granted('IS_AUTHENTICATED_FULLY')"
-        provider: Dbp\Relay\DispatchBundle\ApiPlatform\RequestProvider
+        provider: Dbp\Relay\DispatchBundle\Rest\RequestProvider
         uriTemplate: '/dispatch/requests'
         openapiContext:
           tags: ['Dispatch']
@@ -397,7 +397,7 @@ resources:
         class: ApiPlatform\Metadata\Post
         method: POST
         uriTemplate: "/dispatch/requests/{identifier}/submit"
-        controller: Dbp\Relay\DispatchBundle\ApiPlatform\PostSubmitRequest
+        controller: Dbp\Relay\DispatchBundle\Rest\PostSubmitRequest
         read: false
         write: false
         deserialize: false
