--- a/composer.json
+++ b/composer.json
@@ -6,30 +6,32 @@
         "php": ">=8.1",
         "ext-dom": "*",
         "ext-json": "*",
+        "ext-libxml": "*",
+        "ext-mbstring": "*",
         "ext-simplexml": "*",
         "ext-soap": "*",
-        "ext-mbstring": "*",
-        "ext-libxml": "*",
-        "api-platform/core": "^3.2",
-        "dbp/relay-base-person-bundle": "^0.2.33",
+        "api-platform/core": "^3.3",
+        "dbp/relay-base-person-bundle": "^0.2.35",
         "dbp/relay-blob-library": "^0.2.4",
         "dbp/relay-core-bundle": "^0.1.192",
-        "symfony/framework-bundle": "^5.4.30 || ^6.4",
-        "doctrine/orm": "^2.19 || ^3.2",
-        "doctrine/doctrine-migrations-bundle": "^3.3",
-        "doctrine/dbal": "^3.8 || ^4.0",
-        "doctrine/collections": "^1.8 || ^2",
+        "doctrine/collections": "^2",
+        "doctrine/dbal": "^4.2",
+        "doctrine/doctrine-migrations-bundle": "^3.3.1",
         "doctrine/migrations": "^3.5",
-        "symfony/uid": "^5.4 || ^6.4",
-        "symfony/validator": "^5.4 || ^6.4",
-        "symfony/routing": "^5.4 || ^6.4",
-        "symfony/messenger": "^5.4 || ^6.4",
-        "symfony/console": "^5.4 || ^6.4",
-        "symfony/config": "^5.4 || ^6.4",
-        "symfony/http-foundation": "^5.4 || ^6.4",
-        "symfony/http-kernel": "^5.4 || ^6.4",
-        "symfony/dependency-injection": "^5.4 || ^6.4",
-        "psr/log": "^1.1.4 || ^2.0 || ^3.0"
+        "doctrine/orm": "^3.3",
+        "psr/log": "^3.0",
+        "symfony/config": "^6.4",
+        "symfony/console": "^6.4",
+        "symfony/dependency-injection": "^6.4",
+        "symfony/doctrine-bridge": "^6.4",
+        "symfony/framework-bundle": "^6.4",
+        "symfony/http-foundation": "^6.4",
+        "symfony/http-kernel": "^6.4",
+        "symfony/messenger": "^6.4",
+        "symfony/routing": "^6.4",
+        "symfony/security-core": "^6.4",
+        "symfony/uid": "^6.4",
+        "symfony/validator": "^6.4"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.50",
@@ -37,12 +39,12 @@
         "phpstan/phpstan-phpunit": "^1.3.16",
         "phpstan/phpstan-symfony": "^1.3.7",
         "phpunit/phpunit": "^10.1",
-        "symfony/browser-kit": "^5.4 || ^6.4",
-        "symfony/http-client": "^5.4 || ^6.4",
+        "symfony/browser-kit": "^6.4",
+        "symfony/http-client": "^6.4",
         "symfony/phpunit-bridge": "^7.0.4",
         "vimeo/psalm": "^5.22.2",
-        "symfony/error-handler":"^5.4 || ^6.4",
-        "symfony/monolog-bridge":"^5.4 || ^6.4"
+        "symfony/error-handler":"^6.4",
+        "symfony/monolog-bridge":"^6.4"
     },
     "autoload": {
         "psr-4": {
