--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ext-json": "*",
         "ext-libxml": "*",
         "ext-mbstring": "*",
+        "ext-pdo_sqlite": "*",
         "ext-simplexml": "*",
         "ext-soap": "*",
         "api-platform/core": "^3.4",
@@ -42,11 +43,12 @@
         "phpstan/phpstan-symfony": "^1.3.7",
         "phpunit/phpunit": "^10.1",
         "symfony/browser-kit": "^6.4",
+        "symfony/doctrine-messenger": "^6.4",
+        "symfony/error-handler": "^6.4",
         "symfony/http-client": "^6.4",
+        "symfony/monolog-bridge": "^6.4",
         "symfony/phpunit-bridge": "^7.0.4",
-        "vimeo/psalm": "^5.22.2",
-        "symfony/error-handler":"^6.4",
-        "symfony/monolog-bridge":"^6.4"
+        "vimeo/psalm": "^5.22.2"
     },
     "autoload": {
         "psr-4": {
