Remove support for Psalm

--- a/composer.json
+++ b/composer.json
@@ -47,8 +47,7 @@
         "symfony/error-handler": "^6.4",
         "symfony/http-client": "^6.4",
         "symfony/monolog-bridge": "^6.4",
-        "symfony/phpunit-bridge": "^7.0.4",
-        "vimeo/psalm": "^5.22.2"
+        "symfony/phpunit-bridge": "^7.0.4"
     },
     "autoload": {
         "psr-4": {
@@ -76,13 +75,9 @@
         "phpstan": [
             "@php vendor/bin/phpstan analyze --ansi"
         ],
-        "psalm": [
-            "@php vendor/bin/psalm"
-        ],
         "lint": [
             "@composer run cs",
-            "@composer run phpstan",
-            "@composer run psalm"
+            "@composer run phpstan"
         ],
         "cs-fix": [
             "@php vendor/bin/php-cs-fixer --ansi fix"
