--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "symfony/proxy-manager-bridge": "^6.4",
         "symfony/routing": "^6.4",
         "symfony/security-core": "^6.4",
+        "symfony/serializer": "^6.4",
         "symfony/uid": "^6.4",
         "symfony/validator": "^6.4"
     },
