Add support for api-platform 4.1

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -17,6 +17,8 @@ services:
   Dbp\Relay\DispatchBundle\Service\GroupService:
     autowire: true
     autoconfigure: true
+    arguments:
+      $iriConverter: '@api_platform.iri_converter'
 
   Dbp\Relay\DispatchBundle\Command\:
     resource: '../../Command'
