--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
         "ext-pdo_sqlite": "*",
         "ext-simplexml": "*",
         "ext-soap": "*",
-        "api-platform/core": "^3.4",
+        "api-platform/core": "^3.4 || ^4.1",
         "dbp/relay-base-person-bundle": "^0.2.35",
         "dbp/relay-blob-library": "^0.2.4",
-        "dbp/relay-core-bundle": "^0.1.194",
+        "dbp/relay-core-bundle": "^0.1.210",
         "doctrine/collections": "^2",
         "doctrine/dbal": "^4.2",
         "doctrine/doctrine-bundle": "^2.13.1",
@@ -41,7 +41,7 @@
         "phpstan/phpstan": "^2.0.0",
         "phpstan/phpstan-phpunit": "^2.0.0",
         "phpstan/phpstan-symfony": "^2.0.0",
-        "phpunit/phpunit": "^10.1",
+        "phpunit/phpunit": "^10.5.45",
         "symfony/browser-kit": "^6.4",
         "symfony/doctrine-messenger": "^6.4",
         "symfony/error-handler": "^6.4",
