--- a/composer.json
+++ b/composer.json
@@ -41,13 +41,14 @@
         "phpstan/phpstan": "^2.0.0",
         "phpstan/phpstan-phpunit": "^2.0.0",
         "phpstan/phpstan-symfony": "^2.0.0",
-        "phpunit/phpunit": "^10.5.45",
+        "phpunit/phpunit": "^11.0",
         "symfony/browser-kit": "^6.4",
         "symfony/doctrine-messenger": "^6.4",
         "symfony/error-handler": "^6.4",
         "symfony/http-client": "^6.4",
         "symfony/monolog-bridge": "^6.4",
-        "symfony/phpunit-bridge": "^7.0.4"
+        "symfony/phpunit-bridge": "^7.0.4",
+        "symfony/runtime": "^6.4"
     },
     "autoload": {
         "psr-4": {
@@ -65,7 +66,8 @@
             "php": "8.2"
         },
         "allow-plugins": {
-            "composer/package-versions-deprecated": false
+            "composer/package-versions-deprecated": false,
+            "symfony/runtime": true
         }
     },
     "scripts": {
