--- a/composer.json
+++ b/composer.json
@@ -23,19 +23,19 @@
         "doctrine/migrations": "^3.5",
         "doctrine/orm": "^3.3",
         "psr/log": "^3.0",
-        "symfony/config": "^6.4",
-        "symfony/console": "^6.4",
-        "symfony/dependency-injection": "^6.4.15",
-        "symfony/doctrine-bridge": "^6.4.13",
-        "symfony/framework-bundle": "^6.4",
-        "symfony/http-foundation": "^6.4",
-        "symfony/http-kernel": "^6.4",
-        "symfony/messenger": "^6.4.15",
-        "symfony/routing": "^6.4",
-        "symfony/security-core": "^6.4",
-        "symfony/serializer": "^6.4",
-        "symfony/uid": "^6.4",
-        "symfony/validator": "^6.4"
+        "symfony/config": "^6.4 || ^7.4",
+        "symfony/console": "^6.4 || ^7.4",
+        "symfony/dependency-injection": "^6.4.15 || ^7.4",
+        "symfony/doctrine-bridge": "^6.4.13 || ^7.4",
+        "symfony/framework-bundle": "^6.4 || ^7.4",
+        "symfony/http-foundation": "^6.4 || ^7.4",
+        "symfony/http-kernel": "^6.4 || ^7.4",
+        "symfony/messenger": "^6.4.15 || ^7.4",
+        "symfony/routing": "^6.4 || ^7.4",
+        "symfony/security-core": "^6.4 || ^7.4",
+        "symfony/serializer": "^6.4 || ^7.4",
+        "symfony/uid": "^6.4 || ^7.4",
+        "symfony/validator": "^6.4 || ^7.4"
     },
     "require-dev": {
         "api-platform/symfony": "^4.1",
@@ -44,13 +44,13 @@
         "phpstan/phpstan-phpunit": "^2.0.0",
         "phpstan/phpstan-symfony": "^2.0.0",
         "phpunit/phpunit": "^11.0",
-        "symfony/browser-kit": "^6.4",
-        "symfony/doctrine-messenger": "^6.4",
-        "symfony/error-handler": "^6.4",
-        "symfony/http-client": "^6.4",
-        "symfony/monolog-bridge": "^6.4",
+        "symfony/browser-kit": "^6.4 || ^7.4",
+        "symfony/doctrine-messenger": "^6.4 || ^7.4",
+        "symfony/error-handler": "^6.4 || ^7.4",
+        "symfony/http-client": "^6.4 || ^7.4",
+        "symfony/monolog-bridge": "^6.4 || ^7.4",
         "symfony/phpunit-bridge": "^7.0.4",
-        "symfony/runtime": "^6.4"
+        "symfony/runtime": "^6.4 || ^7.4"
     },
     "autoload": {
         "psr-4": {
